<resources>
    <string name="app_name">文龙一账通</string>

    <!--TabBar-->
    <string name="news">首页</string>
    <string name="equity">行情</string>
    <string name="account">一账通</string>
    <string name="mine">我的</string>
    <string name="about_us">关于我们</string>
    <string name="social_share">我要分享</string>
    <string name="proccess_search">进度查询</string>
    <string name="account_manage">账户管理</string>
    <string name="my_fans">我的粉丝</string>
    <string name="huodong">活动</string>
    <string name="huodong_area">活动专区</string>
    <string name="member_center">等级特权</string>
    <string name="wmsxy">文民商学院</string>
    <string name="wmsq">文民社群</string>
    <string name="promote_poster">推广海报</string>

    <!--Toast提示-->
    <string name="toast_network_unconnceted">无网络连接</string>
    <string name="register_success">恭喜您成为普通文民！</string>
    <string name="check_mobile_success">验证码发送成功</string>
    <string name="commit_profile_onekey">完善个人信息，成为高级文民，即可体验一键极速开户！</string>
    <string name="commit_to_jihuo">成为高级文民才能使用该功能哦</string>

    <!--登录/注册/找回密码/完善用户资料-->
    <string name="hint_input_phone">请输入手机号</string>
    <string name="hint_input_phone_check_number">请输入手机验证码</string>
    <string name="hint_get_phone_check_number">获取验证码</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="hint_input_pwd_check">请再次输入密码</string>
    <string name="hint_input_email">请输入邮箱</string>
    <string name="hint_input_invite">请输入邀请码</string>
    <string name="hint_input_invite_optional">请输入邀请码（选填）</string>
    <string name="login">登录</string>
    <string name="login_now">立即登录</string>
    <string name="register">注册</string>
    <string name="register_">账号注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="find_pwd">找回密码</string>
    <string name="back">返回</string>
    <string name="sure">确定</string>
    <string name="profile_complete">提交详细资料</string>
    <string name="next_step">下一步</string>
    <string name="commit">提交</string>
    <string name="realname">真实姓名:</string>
    <string name="gender">性别:</string>
    <string name="certificate_type">证件类型:</string>
    <string name="certificate_number">证件编号:</string>
    <string name="telphone">手机号码:</string>
    <string name="address">联系地址:</string>
    <string name="bank">出金银行:</string>
    <string name="account_number">银行账号:</string>
    <string name="bank_location">银行所在地:</string>
    <string name="branch_name">支行名称:</string>
    <string name="certificate_front_image">证件正面照</string>
    <string name="certificate_back_image">证件反面照</string>
    <string name="bank_card_image">银行卡正面照</string>
    <string name="tip_upload_certificate_image">请依次拍摄证件照正面，证件照反面，银行卡正面照上传</string>


    <!--首页菜单-->
    <string name="news_menu_dzp">大盘行情</string>
    <string name="news_menu_zx">自选</string>
    <string name="news_menu_sg">申购</string>
    <string name="news_menu_news">新闻中心</string>
    <string name="news_menu_agree">点评</string>
    <string name="news_menu_gg">文交所公告</string>
    <string name="news_menu_activity">羊毛专区</string>
    <string name="news_menu_xh">现货</string>
    <string name="news_menu_sq">文民社群</string>
    <string name="news_menu_sxy">文民商学院</string>
    <string name="news_menu_qmjj">全民经纪</string>

    <string name="news_center">新闻中心</string>
    <string name="profile_complete_rule">标准化注册网络协议</string>

    <!-- 关于我们 -->
    <string name="about_us_intro">产品介绍</string>
    <string name="about_us_cooperate">商务合作</string>
    <string name="about_us_help">使用帮助</string>
    <string name="about_us_contact">联系我们</string>
    <string name="about_us_rule">免责声明</string>


    <string name="tip_wjs_status">温馨提示：一键开户获取的账号和密码为初始账号密码</string>

    <string name="condition_of_level">荣升标准\n（一度粉丝与二度粉丝数量之和>=）</string>
</resources>
