<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/id_tab_news"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_news_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@mipmap/tabbar_news"/>

        <TextView
            android:id="@+id/id_tab_news_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/tabbar_text_default"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_blog"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_blog_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@mipmap/tabbar_equity"/>

        <TextView
            android:id="@+id/id_tab_blog_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_menu_activity"
            android:textColor="@color/tabbar_text_default"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_focus"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_focus_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@mipmap/tabbar_account"/>

        <TextView
            android:id="@+id/id_tab_focus_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/tabbar_text_default"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_profile"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_profile_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="false"
            android:src="@mipmap/tabbar_mine"/>

        <TextView
            android:id="@+id/id_tab_profile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            android:textColor="@color/tabbar_text_default"/>
    </LinearLayout>

</LinearLayout>