<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include
        android:id="@+id/id_topbar"
        layout="@layout/top"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/line_bj_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:src="@mipmap/login_tel"/>

        <EditText
            android:id="@+id/et_user_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:cursorVisible="true"
            android:hint="@string/hint_input_phone"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_centerInParent="true"
        android:background="@color/line_bj_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/line_bj_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:src="@mipmap/login_pwd"/>

        <EditText
            android:id="@+id/et_user_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:cursorVisible="true"
            android:hint="@string/hint_input_pwd"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_centerInParent="true"
        android:background="@color/line_bj_color"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/LoginBtn"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="20.0dip"
        android:gravity="center"
        android:text="@string/login"
        android:onClick="toLogin"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="20.0dip"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/text_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10.0dip"
            android:text="@string/register"
            android:textSize="16.0sp"
            android:onClick="toRegister"/>

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10.0dip"
            android:text="@string/forget_pwd"
            android:textSize="16.0sp"
            android:onClick="toFindPwd"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>

