<?xml version="1.0" encoding="utf-8"?>
<com.inanhu.wenjiaosuo.widget.customswipetorefresh.CustomSwipeToRefresh
    android:id="@+id/swipe_news_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/sv_news_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.bigkoo.convenientbanner.ConvenientBanner
                android:id="@+id/cb_news_ad"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:canLoop="true"/>

            <LinearLayout
                android:id="@+id/ll_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_stock"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/icon_dzp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/news_menu_dzp"
                            android:textColor="@color/gray_55"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_zx"
                        android:layout_width="0.0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/icon_zx"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/news_menu_zx"
                            android:textColor="@color/gray_55"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_sg"
                        android:layout_width="0.0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/icon_sg"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/news_menu_sg"
                            android:textColor="@color/gray_55"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_news"
                        android:layout_width="0.0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/icon_news"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/news_menu_news"
                            android:textColor="@color/gray_55"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_agree"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/icon_agree"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/news_menu_agree"
                            android:textColor="@color/gray_55"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_gg"
                        android:layout_width="0.0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/icon_gg"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/news_menu_gg"
                            android:textColor="@color/gray_55"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_activity"
                        android:layout_width="0.0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/icon_hd"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/news_menu_activity"
                            android:textColor="@color/gray_55"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_xh"
                        android:layout_width="0.0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/icon_xh"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/news_menu_xh"
                            android:textColor="@color/gray_55"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.inanhu.wenjiaosuo.widget.scrollviewwithlistview.ScrollViewWithListView
                android:id="@+id/rv_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"/>
        </LinearLayout>
    </ScrollView>


</com.inanhu.wenjiaosuo.widget.customswipetorefresh.CustomSwipeToRefresh>