<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include
        android:id="@+id/id_topbar"
        layout="@layout/top"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@color/line_bj_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:src="@mipmap/login_tel"/>

                <EditText
                    android:id="@+id/et_user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/hint_input_phone"
                    android:inputType="phone"
                    android:paddingLeft="20dp"
                    android:singleLine="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:background="@color/line_bj_color"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@color/line_bj_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:src="@mipmap/login_tel"/>

                <EditText
                    android:id="@+id/et_phone_check_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/hint_input_phone_check_number"
                    android:inputType="number"
                    android:maxLength="4"
                    android:paddingLeft="20dp"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/btn_get_phone_check_number"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/radius_border_red"
                    android:text="@string/hint_get_phone_check_number"
                    android:textColor="@color/red"
                    android:textSize="14sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:background="@color/line_bj_color"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@color/line_bj_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:src="@mipmap/login_pwd"/>

                <EditText
                    android:id="@+id/et_user_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/hint_input_pwd"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:singleLine="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:background="@color/line_bj_color"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@color/line_bj_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:src="@mipmap/login_pwd"/>

                <EditText
                    android:id="@+id/et_user_pwd_check"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/hint_input_pwd_check"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:singleLine="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:background="@color/line_bj_color"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@color/line_bj_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:src="@mipmap/login_tel"/>

                <EditText
                    android:id="@+id/et_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/hint_input_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:singleLine="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:background="@color/line_bj_color"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@color/line_bj_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:src="@mipmap/login_tel"/>

                <EditText
                    android:id="@+id/et_user_invite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:hint="@string/hint_input_invite_optional"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:singleLine="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_centerInParent="true"
                android:background="@color/line_bj_color"/>

            <Button
                android:id="@+id/btn_register"
                style="@style/LoginBtn"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:gravity="center"
                android:onClick="toRegister"
                android:text="@string/register"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

